MAT-16698, videreføre flagg fra start til matrikkelklient-vm'en